--- a/index.html
+++ b/index.html
@@ -353,7 +353,7 @@
               <li><a href="curatedpackages.html">CURATED PACKAGES</a></li>
             </ul>
           </li>
-          <li class="nav-item dropdown"><a class="nav-link" href="blog.html">BLOG</a></li>
+          <!-- <li class="nav-item dropdown"><a class="nav-link" href="blog.html">BLOG</a></li> -->
           <li class="nav-item"><a class="nav-link" href="contact.html">CONTACT</a></li>
         </ul>
       </nav>
