--- a/exclusivepackages.html
+++ b/exclusivepackages.html
@@ -12,6 +12,8 @@
   <meta name="description" content="Frolic | for Tour Operators & Travel Agencies">
   <meta name="keywords"
     content="tour, ice, trip, travel, agency, life, vacation, treking, boat, walking, climbing, transition, svg, html, css">
+  <link rel="icon" type="image/svg+xml" href="ico/favicon.png" />
+
 
   <!-- CSS FILES -->
   <link rel="stylesheet" href="css/swiper.min.css">
@@ -22,6 +24,110 @@
   <link rel="stylesheet" href="css/style.css">
 
   <style>
+    .section-title {
+      text-align: center;
+      margin-bottom: 40px;
+    }
+
+    .location-heading {
+      font-size: 2.5rem;
+      color: #ff9019;
+      font-weight: 700;
+      margin-bottom: 30px;
+      position: relative;
+      padding-bottom: 15px;
+      text-transform: uppercase;
+      letter-spacing: 1px;
+    }
+
+    .location-heading:after {
+      content: '';
+      position: absolute;
+      bottom: 0;
+      left: 50%;
+      transform: translateX(-50%);
+      width: 80px;
+      height: 3px;
+      background-color: #ff9019;
+    }
+
+    /* Package Card Styling */
+    .package-card {
+      border-radius: 12px;
+      box-shadow: 0 5px 25px rgba(0, 0, 0, 0.1);
+      margin-bottom: 30px;
+      transition: all 0.3s ease;
+      overflow: hidden;
+      height: 100%;
+      display: flex;
+      flex-direction: column;
+    }
+
+    .package-card:hover {
+      transform: translateY(-5px);
+      box-shadow: 0 15px 35px rgba(0, 0, 0, 0.15);
+    }
+
+    .package-image {
+      height: 220px;
+      overflow: hidden;
+      position: relative;
+    }
+
+    .package-image img {
+      width: 100%;
+      height: 100%;
+      object-fit: cover;
+      transition: transform 0.6s ease;
+    }
+
+    .package-card:hover .package-image img {
+      transform: scale(1.05);
+    }
+
+    .package-content {
+      padding: 20px;
+      flex-grow: 1;
+      display: flex;
+      flex-direction: column;
+    }
+
+    .package-title {
+      font-size: 1.3rem;
+      font-weight: 600;
+      color: #333;
+      margin-bottom: 12px;
+      line-height: 1.4;
+    }
+
+    .package-description {
+      color: #666;
+      margin-bottom: 20px;
+      flex-grow: 1;
+    }
+
+    .view-details {
+      padding: 10px 20px;
+      background: linear-gradient(45deg, #ff9019, #ffb067);
+      color: white;
+      border: none;
+      border-radius: 30px;
+      cursor: pointer;
+      font-weight: 600;
+      transition: all 0.3s ease;
+      align-self: flex-start;
+      text-transform: uppercase;
+      font-size: 0.9rem;
+      letter-spacing: 1px;
+    }
+
+    .view-details:hover {
+      background: linear-gradient(45deg, #ff8000, #ff9019);
+      transform: translateY(-2px);
+      box-shadow: 0 5px 15px rgba(255, 144, 25, 0.3);
+    }
+
+    /* Enhanced Modal Styles */
     .modal {
       display: none;
       position: fixed;
@@ -29,113 +135,370 @@
       left: 0;
       width: 100%;
       height: 100%;
-      background-color: rgba(0, 0, 0, 0.7);
+      background-color: rgba(0, 0, 0, 0.8);
       z-index: 9999;
+      backdrop-filter: blur(5px);
+      overflow-y: auto;
     }
 
     .modal-content {
       background-color: #fff;
-      padding: 20px;
-      max-width: 800px;
-      margin: 5% auto;
-      border-radius: 8px;
-      overflow-y: auto;
-      max-height: 85vh;
+      width: 90%;
+      max-width: 900px;
+      margin: 30px auto;
+      border-radius: 12px;
+      box-shadow: 0 15px 50px rgba(0, 0, 0, 0.3);
+      overflow: hidden;
+      position: relative;
+      animation: modalFadeIn 0.4s ease-out;
+    }
+
+    @keyframes modalFadeIn {
+      from {
+        opacity: 0;
+        transform: translateY(30px);
+      }
+
+      to {
+        opacity: 1;
+        transform: translateY(0);
+      }
+    }
+
+    .modal-header {
+      background: linear-gradient(45deg, #ff9019, #ffb067);
+      padding: 20px 25px;
+      position: relative;
+    }
+
+    .modal-title {
+      color: white;
+      font-size: 1.8rem;
+      margin: 0;
+      padding-right: 30px;
     }
 
     .close-btn {
       position: absolute;
-      top: 15px;
+      top: 20px;
       right: 20px;
       font-size: 28px;
-      font-weight: bold;
+      font-weight: 300;
       cursor: pointer;
-      color: #333;
+      color: white;
+      background: rgba(255, 255, 255, 0.2);
+      width: 36px;
+      height: 36px;
+      border-radius: 50%;
+      display: flex;
+      align-items: center;
+      justify-content: center;
+      transition: all 0.3s;
       z-index: 10;
-      transition: color 0.3s;
     }
 
     .close-btn:hover {
-      color: #ff6347;
+      background: rgba(255, 255, 255, 0.3);
+      transform: rotate(90deg);
+    }
+
+    .modal-body {
+      padding: 25px;
     }
 
     /* Photos Section */
     .photos-section {
-      display: flex;
-      gap: 10px;
-      margin-bottom: 20px;
+      display: grid;
+      grid-template-columns: repeat(3, 1fr);
+      gap: 15px;
+      margin-bottom: 25px;
     }
 
     .photos-section img {
-      width: calc(33.33% - 10px);
-      height: 180px;
+      width: 100%;
+      height: 200px;
       object-fit: cover;
       border-radius: 8px;
+      transition: transform 0.3s;
+      cursor: pointer;
+    }
+
+    .photos-section img:hover {
+      transform: scale(1.03);
+    }
+
+    /* Package Description */
+    #modal-description {
+      font-size: 1.05rem;
+      line-height: 1.7;
+      color: #444;
+      margin-bottom: 30px;
     }
 
     /* Day Toggle */
     .day-toggle {
       display: flex;
+      flex-wrap: wrap;
       gap: 10px;
-      margin-top: 10px;
-      margin-bottom: 20px;
+      margin: 20px 0;
     }
 
     .day-toggle button {
-      background-color: #ddd;
-      color: #000;
-      padding: 8px 16px;
+      background-color: #f0f0f0;
+      color: #555;
+      padding: 10px 16px;
       border: none;
-      border-radius: 5px;
+      border-radius: 30px;
       cursor: pointer;
+      transition: all 0.3s;
+      font-weight: 600;
+      outline: none;
     }
 
     .day-toggle button.active {
-      background-color: #ff7f50;
-      color: #fff;
+      background: linear-gradient(45deg, #ff9019, #ffb067);
+      color: white;
+      box-shadow: 0 3px 10px rgba(255, 144, 25, 0.2);
+    }
+
+    .day-toggle button:hover:not(.active) {
+      background-color: #e0e0e0;
+    }
+
+    /* Section Headers */
+    .modal-section-header {
+      color: #ff9019;
+      font-size: 1.5rem;
+      font-weight: 600;
+      margin: 30px 0 20px;
+      border-bottom: 2px solid #f0f0f0;
+      padding-bottom: 10px;
     }
 
     /* Itinerary Table */
     .itinerary-table {
       width: 100%;
-      border-collapse: collapse;
-      margin-top: 10px;
-      margin-bottom: 20px;
+      border-collapse: separate;
+      border-spacing: 0;
+      border-radius: 8px;
+      overflow: hidden;
+      box-shadow: 0 0 20px rgba(0, 0, 0, 0.05);
+      margin-bottom: 30px;
     }
 
     .itinerary-table th,
     .itinerary-table td {
-      border: 1px solid #ccc;
-      padding: 10px;
+      padding: 15px;
       text-align: left;
+      border-bottom: 1px solid #eee;
     }
 
     .itinerary-table th {
-      background-color: #f4f4f4;
-      font-weight: bold;
+      background: #f8f9fa;
+      font-weight: 600;
+      color: #333;
     }
 
-    .itinerary-table tr:nth-child(even) {
-      background-color: #fafafa;
-    }
-
-    .itinerary-table th:first-child,
-    .itinerary-table td:first-child {
+    .itinerary-table th:first-child {
       width: 120px;
-      /* Adjust as needed */
-      min-width: 120px;
-      max-width: 120px;
-      text-align: left;
+    }
+
+    .itinerary-table tr:last-child td {
+      border-bottom: none;
+    }
+
+    .itinerary-table tr:hover {
+      background-color: #fafafa;
     }
 
     /* Package Includes */
     #modal-includes {
-      margin-top: 10px;
-      padding-left: 20px;
+      list-style-type: none;
+      padding: 0;
+      margin: 0;
+      display: grid;
+      grid-template-columns: repeat(auto-fill, minmax(250px, 1fr));
+      gap: 10px;
     }
 
     #modal-includes li {
-      margin-bottom: 5px;
+      padding: 10px 15px;
+      background-color: #f9f9f9;
+      border-radius: 6px;
+      position: relative;
+      padding-left: 35px;
+    }
+
+    #modal-includes li:before {
+      content: '✓';
+      color: #ff9019;
+      position: absolute;
+      left: 15px;
+      font-weight: bold;
+    }
+
+    /* Modal Footer */
+    .modal-footer {
+      padding: 20px 25px;
+      border-top: 1px solid #eee;
+      display: flex;
+      justify-content: space-between;
+    }
+
+    .modal-btn {
+      padding: 12px 24px;
+      border-radius: 30px;
+      cursor: pointer;
+      font-weight: 600;
+      transition: all 0.3s;
+      text-transform: uppercase;
+      letter-spacing: 1px;
+      font-size: 0.9rem;
+    }
+
+    .btn-enquire {
+      background: linear-gradient(45deg, #ff9019, #ffb067);
+      color: white;
+      border: none;
+    }
+
+    .btn-enquire:hover {
+      background: linear-gradient(45deg, #ff8000, #ff9019);
+      transform: translateY(-2px);
+      box-shadow: 0 5px 15px rgba(255, 144, 25, 0.3);
+    }
+
+    .btn-close {
+      background: transparent;
+      border: 2px solid #ddd;
+      color: #666;
+    }
+
+    .btn-close:hover {
+      background: #f5f5f5;
+      border-color: #ccc;
+    }
+
+    /* Responsive Adjustments */
+    @media (max-width: 991.98px) {
+      .location-heading {
+        font-size: 2.2rem;
+      }
+
+      .photos-section {
+        gap: 10px;
+      }
+
+      .photos-section img {
+        height: 180px;
+      }
+    }
+
+    @media (max-width: 767.98px) {
+      .location-heading {
+        font-size: 1.8rem;
+      }
+
+      .modal-content {
+        width: 95%;
+        margin: 20px auto;
+      }
+
+      .photos-section {
+        grid-template-columns: 1fr 1fr;
+      }
+
+      .photos-section img:last-child {
+        grid-column: span 2;
+      }
+
+      #modal-includes {
+        grid-template-columns: 1fr;
+      }
+
+      .modal-title {
+        font-size: 1.5rem;
+      }
+
+      .close-btn {
+        top: 15px;
+        right: 15px;
+        width: 32px;
+        height: 32px;
+      }
+
+      .modal-footer {
+        flex-direction: column;
+        gap: 15px;
+      }
+
+      .modal-footer .modal-btn {
+        width: 100%;
+      }
+    }
+
+    @media (max-width: 575.98px) {
+      .location-heading {
+        font-size: 1.5rem;
+      }
+
+      .modal-content {
+        width: 100%;
+        margin: 0;
+        border-radius: 0;
+        min-height: 100vh;
+      }
+
+      .photos-section {
+        grid-template-columns: 1fr;
+      }
+
+      .photos-section img {
+        height: 200px;
+      }
+
+      .photos-section img:last-child {
+        grid-column: span 1;
+      }
+
+      .day-toggle button {
+        padding: 8px 12px;
+        font-size: 0.85rem;
+      }
+
+      .modal-title {
+        font-size: 1.3rem;
+      }
+
+      .modal-body {
+        padding: 15px;
+      }
+
+      .itinerary-table th,
+      .itinerary-table td {
+        padding: 10px;
+        font-size: 0.9rem;
+      }
+    }
+
+    /* Additional padding for page containers to prevent content sticking to edges */
+    @media (max-width: 991.98px) {
+      .popular-tours .container {
+        padding-left: 25px;
+        padding-right: 25px;
+      }
+    }
+
+    @media (max-width: 767.98px) {
+      .popular-tours .container {
+        padding-left: 30px;
+        padding-right: 30px;
+      }
+
+      .section-title {
+        padding-left: 15px;
+        padding-right: 15px;
+      }
     }
   </style>
 </head>
@@ -186,7 +549,7 @@
     <div class="container">
       <div class="row">
         <div class="section-title">
-          <h1 class="location-heading">Exclusive Goa Wildlife & Nature Packages: Biodiversity Discovery Journeys</h1>
+          <h1 class="location-heading">Exclusive Goa Wildlife & Nature Packages:<br>Biodiversity Discovery Journeys</h1>
         </div>
 
         <!-- Dynamic content will be inserted here by JavaScript -->
@@ -201,7 +564,7 @@
     <div class="container">
       <div class="row">
         <div class="section-title">
-          <h1 class="location-heading">Exclusive Goa Cultural Heritage Packages: Journey Through Time</h1>
+          <h1 class="location-heading">Exclusive Goa Cultural Heritage Packages:<br>Journey Through Time</h1>
         </div>
 
         <!-- Dynamic content will be inserted here by JavaScript -->
@@ -216,7 +579,7 @@
     <div class="container">
       <div class="row">
         <div class="section-title">
-          <h1 class="location-heading">Exclusive Goa Adventure & Active Packages: Thrill-Seeker's Paradise</h1>
+          <h1 class="location-heading">Exclusive Goa Adventure & Active Packages:<br>Thrill-Seeker's Paradise</h1>
         </div>
 
         <!-- Dynamic content will be inserted here by JavaScript -->
@@ -241,36 +604,46 @@
     </div>
   </section>
 
-  <!-- Modal -->
+  <!-- Update the Modal Structure -->
   <div id="packageModal" class="modal">
     <div class="modal-content">
-      <span class="close-btn" onclick="closeModal()">&times;</span>
+      <div class="modal-header">
+        <h2 id="modal-title" class="modal-title"></h2>
+        <span class="close-btn" onclick="closeModal()">&times;</span>
+      </div>
 
-      <!-- Photos Section -->
-      <div id="modal-photos" class="photos-section"></div>
+      <div class="modal-body">
+        <!-- Photos Section -->
+        <div id="modal-photos" class="photos-section"></div>
 
-      <!-- Title and Description -->
-      <h2 id="modal-title"></h2>
-      <p id="modal-description"></p>
+        <!-- Description -->
+        <p id="modal-description"></p>
 
-      <!-- Day Toggle Buttons -->
-      <div id="day-toggle" class="day-toggle"></div>
+        <!-- Day Toggle Buttons -->
+        <div id="day-toggle" class="day-toggle"></div>
 
-      <!-- Itinerary Section -->
-      <h3>Itinerary</h3>
-      <table class="itinerary-table">
-        <thead>
-          <tr>
-            <th>Time</th>
-            <th>Activity</th>
-          </tr>
-        </thead>
-        <tbody id="modal-itinerary"></tbody>
-      </table>
+        <!-- Itinerary Section -->
+        <h3 class="modal-section-header">Daily Itinerary</h3>
+        <table class="itinerary-table">
+          <thead>
+            <tr>
+              <th>Time</th>
+              <th>Activity</th>
+            </tr>
+          </thead>
+          <tbody id="modal-itinerary"></tbody>
+        </table>
 
-      <!-- Package Includes -->
-      <h3>Package Includes</h3>
-      <ul id="modal-includes"></ul>
+        <!-- Package Includes -->
+        <h3 class="modal-section-header">Package Includes</h3>
+        <ul id="modal-includes"></ul>
+      </div>
+
+      <div class="modal-footer">
+        <button type="button" class="modal-btn btn-enquire" onclick="window.location.href='contact.html'">Enquire
+          Now</button>
+        <button type="button" class="modal-btn btn-close" onclick="closeModal()">Close</button>
+      </div>
     </div>
   </div>
 
@@ -334,8 +707,6 @@
 
 
   <!-- JS FILES -->
-  <script data-cfasync="false"
-    src="https://cdn-cgi.com/scripts/5c5dd728/cloudflare-static/email-decode.min.js"></script>
   <script src="js/jquery-3.4.1.min.js"></script>
   <script src="js/moment.min.js"></script>
   <script src="js/daterangepicker.min.js"></script>
